--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -5,8 +5,81 @@ body {
 
 }
 
-h1 {
+.ny {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
-    font-size: 100px;
+    font-size: 200px;
+    line-height: 200px;
+    margin-bottom: 0;
 }
+
+.edu {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: grey;
+    font-size: 30px;
+    font-weight: 150;
+    
+}
+.descript {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(85, 85, 85);
+    line-height: 1.8;
+    font-size: 18px;
+}
+
+.Navigation {
+    text-align: center;
+    font-size: 14px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    letter-spacing: 2px; 
+    margin-right: 0%;
+    
+}
+
+.Navigation a {
+    width: 100px;
+}
+
+.Navigation a.tiger {
+    float: left;
+    margin-left: 0px;
+    padding-left: 0px;
+
+}
+
+.Navigation a.linkt {
+    float: right;
+}
+
+.Navigation a.resume {
+    float: right;
+}
+
+.Navigation a.git {
+    float: right;
+}
+
+.Navigation-nav {
+    margin-left: 0px;
+    margin-right: 30px;  
+}
+
+.Navigation a:link {
+    text-decoration: none;
+    color: rgb(85, 85, 85);
+    
+}
+
+.Navigation a:active {
+    color: rgb(255, 255, 255);
+}
+
+/* .Navigation a:visited {
+    color: rgb(85, 85, 85);
+} */
+
+.Navigation a:hover {
+    color:black;
+}
+
+
