--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -5,6 +5,12 @@ body {
 
 }
 
+.curricular {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
+    font-size: 75px;
+}
+
 .ny {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
@@ -20,6 +26,18 @@ body {
     font-weight: 150;
     
 }
+
+.mySlides {
+    align-self: center;
+
+}
+.caption {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    text-align: center;
+    letter-spacing: 2px;
+}
+
 .descript {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: rgb(85, 85, 85);
@@ -44,6 +62,8 @@ body {
     float: left;
     margin-left: 0px;
     padding-left: 0px;
+    width: 10px;
+    height: 10px;
 
 }
 
