--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -27,17 +27,6 @@ body {
     
 }
 
-.mySlides {
-    align-self: center;
-
-}
-.caption {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 18px;
-    text-align: center;
-    letter-spacing: 2px;
-}
-
 .descript {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: rgb(85, 85, 85);
@@ -107,11 +96,51 @@ body {
 */
 
 .row {
-    display: flex
+    display: flex;
+    height: 500px;
 }
 
 .column {
+    position:relative;
+    width: 50%;
     flex: 33.3%;
+    
 }
 
+.projPic {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
 
+.overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #008CBA;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+  }
+
+.column:hover .overlay {
+    height: 100%;
+
+}
+
+.caption {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    text-align: center;
+    letter-spacing: 2px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
