--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -19,6 +19,15 @@ body {
     margin-bottom: 0;
 }
 
+.PROJNAME {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
+    font-size: 200px;
+    line-height: 200px;
+    margin-bottom: 0;
+    font-stretch: condensed;
+}
+
 .edu {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: grey;
@@ -83,9 +92,9 @@ body {
     color: rgb(255, 255, 255);
 }
 
-/* .Navigation a:visited {
+.Navigation a:visited {
     color: rgb(85, 85, 85);
-} */
+}
 
 .Navigation a:hover {
     color:black;
@@ -98,14 +107,21 @@ body {
 .row {
     display: flex;
     height: 500px;
+    column-gap: 30px;
+    flex: auto;
 }
 
 .column {
     position:relative;
-    width: 50%;
-    flex: 33.3%;
+    width: 33.3%;
+    text-align: left;
+    outline-color: black;
+    outline: 5px solid;
+    overflow: hidden;
     
 }
+
+
 
 .projPic {
     display: block;
@@ -114,24 +130,32 @@ body {
     object-fit: fill;
 }
 
-.overlay {
+.column .overlay {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #008CBA;
+    background-color:black;
     overflow: hidden;
     width: 100%;
     height: 0;
     transition: .5s ease;
-  }
+}
 
 .column:hover .overlay {
     height: 100%;
 
 }
 
-.caption {
+.ovPic {
+    opacity: 15%;
+    height: 100%;
+    width: 100%;
+    object-fit: fill;
+}
+
+a.caption {
+    color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
     text-align: center;
@@ -142,5 +166,20 @@ body {
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    text-align: center;
+    text-decoration: none;
+    flex: auto;
 }
+
+a.caption:hover {
+    opacity: 50%;
+    
+}
+
+a.caption:visited {
+    color: white;
+}
+
+
+
+
+
