--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -107,7 +107,7 @@ body {
 .row {
     display: flex;
     height: 500px;
-    column-gap: 30px;
+    column-gap: 20px;
     flex: auto;
 }
 
@@ -157,7 +157,7 @@ body {
 a.caption {
     color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 18px;
+    font-size: 25px;
     text-align: center;
     letter-spacing: 2px;
     position: absolute;
@@ -177,6 +177,24 @@ a.caption:hover {
 
 a.caption:visited {
     color: white;
+}
+
+a.return {
+    text-decoration: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 25px;
+    color: black
+}
+
+a.return:hover {
+    opacity: 50%;
+}
+
+footer {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    color: rgb(85, 85, 85);
+    text-align: right;
 }
 
 
