--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -5,6 +5,19 @@ body {
 
 }
 
+.loader {
+
+    position: fixed;
+    z-index: 9999;
+    background: url('whiteTiger.svg') 50% 50% no-repeat;
+    background-color: black;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    
+}
+
 .curricular {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
@@ -22,7 +35,7 @@ body {
 .PROJNAME {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
-    font-size: 200px;
+    font-size: 10vw;
     line-height: 200px;
     margin-bottom: 0;
     font-stretch: condensed;
@@ -108,26 +121,17 @@ body {
     display: flex;
     height: 500px;
     column-gap: 20px;
-    flex: auto;
 }
 
 .column {
+    flex-grow: 1;
     position:relative;
-    width: 33.3%;
     text-align: left;
     outline-color: black;
     outline: 5px solid;
     overflow: hidden;
+    /* width: 33.3%; */
     
-}
-
-
-
-.projPic {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: fill;
 }
 
 .column .overlay {
@@ -157,7 +161,7 @@ body {
 a.caption {
     color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 25px;
+    font-size: 2.5vw;
     text-align: center;
     letter-spacing: 2px;
     position: absolute;
