--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -185,9 +185,10 @@ a.caption:visited {
 
 a.return {
     text-decoration: none;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 25px;
-    color: black
+    color: black;
+    font-weight:700;
 }
 
 a.return:hover {
@@ -200,6 +201,12 @@ footer {
     color: rgb(85, 85, 85);
     text-align: right;
 }
+
+.courier {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+}
+
 
 
 
