--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -174,6 +174,31 @@ a.caption {
     flex: auto;
 }
 
+.contact {
+    flex-grow: 1;
+    position:relative;
+    text-align: left;
+    outline-color: black;
+    outline: 5px solid;
+    overflow: hidden;
+}
+
+.contact .overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color:black;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+}
+
+.contact:hover .overlay {
+    height: 100%;
+}
+
 a.caption:hover {
     opacity: 50%;
     
@@ -208,7 +233,7 @@ footer {
 }
 
 
-
-
-
-
+.contact {
+    padding: 1%;
+    
+}
