--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -41,6 +41,16 @@ body {
     font-stretch: condensed;
 }
 
+.CONTACT {
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
+    font-size: 5vw;
+    line-height: 10vw;
+    margin-bottom: 0;
+    font-stretch: condensed;
+}
+
 .edu {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: grey;
