--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -1,8 +1,40 @@
+html {
+    scroll-behavior: smooth;
+}
+
+
 body {
     background-color: rgb(255, 255, 255);
-    margin-left: 10%;
     margin-right: 10%;
 
+}
+
+.bigRow {
+    display:flex;
+    height: 100%;
+    column-gap: 10%;
+}
+
+.scrollWheel {
+    width: 15%;
+    display:flex;
+    position:relative;
+    height: 50vw;
+    justify-content: center;
+    align-items: center;
+}
+
+.scrollTing {
+    position: fixed;
+    animation: rotate 1s linear infinite;
+    animation-play-state: paused;
+    animation-delay: calc(var(--scroll)* -1s);
+}
+
+@keyframes rotate {
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .loader {
@@ -21,7 +53,7 @@ body {
 .curricular {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
-    font-size: 75px;
+    font-size: 3vw;
 }
 
 .ny {
@@ -46,13 +78,13 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
     font-size: 5vw;
-    line-height: 10vw;
+    line-height: 8vw;
     margin-bottom: 0;
     font-stretch: condensed;
 }
 
 .edu {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     color: grey;
     font-size: 30px;
     font-weight: 150;
@@ -66,20 +98,21 @@ body {
     font-size: 18px;
 }
 
-.Navigation {
+#Navigation {
     text-align: center;
     font-size: 14px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     letter-spacing: 2px; 
     margin-right: 0%;
+    box-shadow: 1px 5px black;
     
 }
 
-.Navigation a {
+#Navigation a {
     width: 100px;
 }
 
-.Navigation a.tiger {
+#Navigation #tiger {
     float: left;
     margin-left: 0px;
     padding-left: 0px;
@@ -88,44 +121,45 @@ body {
 
 }
 
-.Navigation a.linkt {
+#Navigation a.linkt {
     float: right;
 }
 
-.Navigation a.resume {
+#Navigation a.resume {
     float: right;
 }
 
-.Navigation a.git {
+#Navigation a.git {
     float: right;
 }
 
-.Navigation-nav {
+#Navigation-nav {
     margin-left: 0px;
     margin-right: 30px;  
 }
 
-.Navigation a:link {
+#Navigation a:link {
     text-decoration: none;
     color: rgb(85, 85, 85);
     
 }
 
-.Navigation a:active {
+#Navigation a:active {
     color: rgb(255, 255, 255);
 }
 
-.Navigation a:visited {
+#Navigation a:visited {
     color: rgb(85, 85, 85);
 }
 
-.Navigation a:hover {
+#Navigation a:hover {
     color:black;
 }
 
 /*
     Styling for the slideshow projects/experience
 */
+
 
 .row {
     display: flex;
@@ -219,6 +253,7 @@ a.caption:visited {
 }
 
 a.return {
+    
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
     font-size: 25px;
@@ -234,7 +269,7 @@ footer {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
     color: rgb(85, 85, 85);
-    text-align: right;
+    text-align: center;
 }
 
 .courier {
@@ -248,7 +283,57 @@ footer {
     
 }
 
-footer {
-    text-align: center;
+.footer a.bstars {
+    
+    width: 10px;
+    height: 10px;
+}
+
+.resumeBruh {
+    background-color: black;
+    border-radius: 1%;
+}
+
+.resume-header {
+    margin-left: 5%;
+    text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
+    font-size: 1vw;
+    color: rgb(200, 36, 222);
+    font-weight:700;
+}
+
+.resume-info {
+    margin-left: 10%;
+    text-decoration: none;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1vw;
+    color: rgb(255, 255, 255);
+    font-weight:700;
+}
+
+.resume-info-curr {
+    margin-left: 10%;
+    text-decoration: none;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1vw;
+    color: rgb(36, 204, 39);
+    font-weight:700;
+}
+
+.resumeBrackets {
+    text-decoration: none;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1vw;
+    color: rgb(255, 255, 255);
+    font-weight:700;
+}
+
+.resumeBr {
+    margin-left: 5%;
+    text-decoration: none;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1vw;
+    color: rgb(255, 255, 255);
+    font-weight:700;
 }
