--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -1,10 +1,12 @@
 html {
     scroll-behavior: smooth;
+    background: url('matrixWebonWhite.svg');
 }
 
 
 body {
-    background-color: rgb(255, 255, 255);
+    
+    
     margin-right: 10%;
 
 }
@@ -12,11 +14,12 @@ body {
 .bigRow {
     display:flex;
     height: 100%;
-    column-gap: 10%;
+    
 }
 
 .scrollWheel {
-    width: 15%;
+    margin-right: 125px;
+    margin-left: 125px;
     display:flex;
     position:relative;
     height: 50vw;
@@ -29,6 +32,7 @@ body {
     animation: rotate 1s linear infinite;
     animation-play-state: paused;
     animation-delay: calc(var(--scroll)* -1s);
+    opacity: 70%;
 }
 
 @keyframes rotate {
@@ -84,18 +88,20 @@ body {
 }
 
 .edu {
-    font-family: 'Courier New', Courier, monospace;
-    color: grey;
-    font-size: 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(255, 255, 255);
+    font-size: 40px;
     font-weight: 150;
+    margin: 5px;
     
 }
 
 .descript {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: rgb(85, 85, 85);
+    font-family: 'Courier New', Courier, monospace;
+    color: rgb(0, 0, 0);
     line-height: 1.8;
     font-size: 18px;
+    margin-right: 50%;
 }
 
 #Navigation {
@@ -104,7 +110,9 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     letter-spacing: 2px; 
     margin-right: 0%;
-    box-shadow: 1px 5px black;
+    display:block;
+    background-color: aliceblue;
+    
     
 }
 
@@ -112,9 +120,9 @@ body {
     width: 100px;
 }
 
-#Navigation #tiger {
+#Navigation a.tiger {
     float: left;
-    margin-left: 0px;
+    margin-left: -25px;
     padding-left: 0px;
     width: 10px;
     height: 10px;
@@ -136,6 +144,7 @@ body {
 #Navigation-nav {
     margin-left: 0px;
     margin-right: 30px;  
+    
 }
 
 #Navigation a:link {
@@ -219,12 +228,7 @@ a.caption {
 }
 
 .contact {
-    flex-grow: 1;
-    position:relative;
-    text-align: left;
-    outline-color: black;
-    outline: 5px solid;
-    overflow: hidden;
+
 }
 
 .contact .overlay {
@@ -269,7 +273,7 @@ footer {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
     color: rgb(85, 85, 85);
-    text-align: center;
+    text-align: right;
 }
 
 .courier {
@@ -278,8 +282,24 @@ footer {
 }
 
 
-.contact {
-    padding: 1%;
+.eduBox1 {
+    margin-right: 54%;
+    text-align: left;
+    outline-color: black;
+    outline: 5px solid;
+    overflow: hidden;
+    background-color: black;
+    border-radius: 2px;
+}
+
+.eduBox2 {
+    margin-right: 16%;
+    border-radius: 2px;
+    background-color: black;
+    text-align: left;
+    outline-color: black;
+    outline: 5px solid;
+    overflow: hidden;
     
 }
 
@@ -336,4 +356,76 @@ footer {
     font-size: 1vw;
     color: rgb(255, 255, 255);
     font-weight:700;
+}
+
+/** cursor animation for description **/
+
+
+.container {
+  display: flex;
+  align-items: left;
+  justify-content: center;
+}
+
+.box {
+  
+}
+
+.box h2 {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+}
+
+@keyframes cursor-blink {
+  0% {
+    opacity: 0;
+  }
+}
+
+.box p::after {
+  content: " ";
+  width: 5px;
+  height: 18px;
+  background: #000000;
+  display: inline-block;
+  animation: cursor-blink 1.5s steps(2) infinite;
+}
+
+.contactMe {
+    
+    text-decoration: none;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1.25vw;
+    color: rgb(0, 0, 0);
+    font-weight:700;
+}
+
+.myInfo {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 3vw;
+    
+}
+
+a.contactMe-Info {
+    color: rgb(200, 36, 222);
+    text-decoration: none;
+}
+
+a.contactMe-Info:hover {
+    opacity: 50%;
+}
+
+a.contactMe-Info:visited {
+    color: rgb(200, 36, 222);
+}
+
+a.contactMe-email {
+    color: rgb(200, 36, 222);
+    text-decoration: none;
+}
+
+
+a.bstars:hover {
+    opacity: 75%;
 }
