--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -6,7 +6,7 @@ html {
 
 body {
     
-    
+    margin-left: 10%;
     margin-right: 10%;
 
 }
@@ -57,7 +57,7 @@ body {
 .curricular {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
-    font-size: 3vw;
+    font-size: 80px;
 }
 
 .ny {
@@ -71,11 +71,12 @@ body {
 .PROJNAME {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
-    font-size: 10vw;
+    font-size: 12vw;
     line-height: 200px;
     margin-bottom: 0;
     font-stretch: condensed;
 }
+
 
 .CONTACT {
 
@@ -101,7 +102,7 @@ body {
     color: rgb(0, 0, 0);
     line-height: 1.8;
     font-size: 18px;
-    margin-right: 50%;
+    margin-right: 40%;
 }
 
 #Navigation {
@@ -111,7 +112,6 @@ body {
     letter-spacing: 2px; 
     margin-right: 0%;
     display:block;
-    background-color: aliceblue;
     
     
 }
@@ -227,10 +227,6 @@ a.caption {
     flex: auto;
 }
 
-.contact {
-
-}
-
 .contact .overlay {
     position: absolute;
     bottom: 0;
@@ -318,7 +314,7 @@ footer {
     margin-left: 5%;
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 1vw;
+    font-size: 20px;
     color: rgb(200, 36, 222);
     font-weight:700;
 }
@@ -327,7 +323,7 @@ footer {
     margin-left: 10%;
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 1vw;
+    font-size: 20px;
     color: rgb(255, 255, 255);
     font-weight:700;
 }
@@ -336,7 +332,7 @@ footer {
     margin-left: 10%;
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 1vw;
+    font-size: 20px;
     color: rgb(36, 204, 39);
     font-weight:700;
 }
@@ -344,7 +340,7 @@ footer {
 .resumeBrackets {
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 1vw;
+    font-size: 20px;
     color: rgb(255, 255, 255);
     font-weight:700;
 }
@@ -353,7 +349,7 @@ footer {
     margin-left: 5%;
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 1vw;
+    font-size: 20px;
     color: rgb(255, 255, 255);
     font-weight:700;
 }
@@ -396,14 +392,14 @@ footer {
     
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 1.25vw;
+    font-size: 25px;
     color: rgb(0, 0, 0);
     font-weight:700;
 }
 
 .myInfo {
     font-family: 'Courier New', Courier, monospace;
-    font-size: 3vw;
+    font-size: 60px;
     
 }
 
