--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -90,10 +90,11 @@ body {
 
 .edu {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: rgb(255, 255, 255);
-    font-size: 40px;
-    font-weight: 150;
+    color: rgb(100, 100, 100);
+    font-size: 30px;
+    font-weight: 300;
     margin: 5px;
+    
     
 }
 
@@ -102,7 +103,7 @@ body {
     color: rgb(0, 0, 0);
     line-height: 1.8;
     font-size: 18px;
-    margin-right: 40%;
+   
 }
 
 #Navigation {
@@ -278,8 +279,8 @@ footer {
 }
 
 
-.eduBox1 {
-    margin-right: 54%;
+/* .eduBox1 {
+    
     text-align: left;
     outline-color: black;
     outline: 5px solid;
@@ -297,13 +298,14 @@ footer {
     outline: 5px solid;
     overflow: hidden;
     
-}
+} */
 
 .footer a.bstars {
     
     width: 10px;
     height: 10px;
 }
+
 
 .resumeBruh {
     background-color: black;
@@ -424,4 +426,12 @@ a.contactMe-email {
 
 a.bstars:hover {
     opacity: 75%;
+}
+
+.credits {
+    font-family: 'Courier New', Courier, monospace;
+    color: rgb(0, 0, 0);
+    line-height: 1.8;
+    font-size: 18px;
+    text-align: center;
 }
