--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -113,8 +113,6 @@ body {
     letter-spacing: 2px; 
     margin-right: 0%;
     display:block;
-    
-    
 }
 
 #Navigation a {
@@ -129,6 +127,22 @@ body {
     height: 10px;
 
 }
+
+#Navigation ul {
+    justify-content: space-evenly;
+    
+}
+
+#Navigation li {
+    list-style-type: none;
+    
+    text-align: center;
+    font-size: 14px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    letter-spacing: 2px; 
+    margin-right: 0%;
+    display:block;
+  }
 
 #Navigation a.linkt {
     float: right;
@@ -435,3 +449,125 @@ a.bstars:hover {
     font-size: 18px;
     text-align: center;
 }
+
+#hamburger-input{
+    display: none;
+  }
+  
+  #hamburger-menu {
+      position: fixed;
+      background-color: white;
+      z-index: 1;
+      top: 60px;
+      right: 5%;
+      width: 50px;
+      height: 50px;
+      display: none;
+      border: none;
+      padding: 0px;
+      margin: 0px;
+      font-family: 'Cabin', Sans-serif;
+      transition: all 300ms ease;
+      background: linear-gradient(
+        to bottom, 
+        black, black 20%, 
+        white 20%, white 40%, 
+        black, black 60%, 
+        white 60%, white 80%, 
+        black 80%, black 100%
+      );
+  }
+  
+  #hamburger-menu #sidebar-menu {
+      visibility: hidden;
+      position: fixed;
+      top: 0;
+      right: -250px;
+      width: 50%;
+      height: 100%;
+      background-color: rgb(200, 36, 222);
+      transition: 0.3s;
+      padding: 0px 10px;
+      box-sizing: border-box;
+  }
+/*   
+  #hamburger-menu h3 {
+    color: #B9FAF8;
+    font-size: 2.2rem;
+  } */
+  
+  #hamburger-menu ul {
+    padding-right: 0px;
+  }
+  
+  #hamburger-menu li {
+    list-style-type: none;
+    line-height: 3rem;
+  }
+  
+  #hamburger-menu a {
+    color: black;
+    font-size: 1.3rem;
+    text-decoration: none;
+  }
+  
+  #hamburger-menu a:hover {
+    color: rgb(85, 85, 85);
+  }
+  
+  #hamburger-input:checked + #hamburger-menu #sidebar-menu {
+    visibility: visible;
+    right: 0;
+  }
+  #hamburger-input:checked ~ .overlay{
+    visibility: visible;
+    opacity: 0.4;
+  }
+  
+  
+  @media screen and (max-width: 750px) {
+
+    body {
+      margin-right: 20%;
+    }
+
+    #Navigation {
+      display: none;
+    }
+    #hamburger-menu {
+      display: inline;
+    }
+
+    .PROJNAME {
+        font-size: 100px;
+    }
+
+    a.caption {
+        font-size: 50px;
+    }
+
+    .row {
+        display:block;
+        height: 500px;
+        padding-bottom: 400px;
+        
+
+    }
+    
+    .column {
+        flex-grow: 1;
+        text-align: left;
+        outline-color: black;
+        outline: 5px solid;
+        overflow: hidden;
+        width: 100%;
+        row-gap: 1000px;
+        /* width: 33.3%; */
+        
+    }
+
+  }
+
+  .hamburger-menue {
+    background-color: azure;
+  }
