--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -57,13 +57,13 @@ body {
 .curricular {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
-    font-size: 80px;
+    font-size: 4rem;
 }
 
 .ny {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
-    font-size: 200px;
+    font-size: 10rem;
     line-height: 200px;
     margin-bottom: 0;
 }
@@ -71,7 +71,7 @@ body {
 .PROJNAME {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
-    font-size: 12vw;
+    font-size: 10rem;
     line-height: 200px;
     margin-bottom: 0;
     font-stretch: condensed;
@@ -102,7 +102,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
     color: rgb(0, 0, 0);
     line-height: 1.8;
-    font-size: 18px;
+    font-size: 1.1rem;
    
 }
 
@@ -186,6 +186,12 @@ body {
 
 
 .row {
+    display: flex;
+    height: 500px;
+    column-gap: 20px;
+}
+
+.row-end {
     display: flex;
     height: 500px;
     column-gap: 20px;
@@ -292,7 +298,6 @@ footer {
     font-size: 20px;
 }
 
-
 /* .eduBox1 {
     
     text-align: left;
@@ -379,10 +384,6 @@ footer {
   justify-content: center;
 }
 
-.box {
-  
-}
-
 .box h2 {
   display: flex;
   align-items: center;
@@ -408,14 +409,14 @@ footer {
     
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 25px;
+    font-size: 1.3rem;
     color: rgb(0, 0, 0);
     font-weight:700;
 }
 
 .myInfo {
     font-family: 'Courier New', Courier, monospace;
-    font-size: 60px;
+    font-size: 2.5rem;
     
 }
 
@@ -460,8 +461,8 @@ a.bstars:hover {
       z-index: 1;
       top: 60px;
       right: 5%;
-      width: 50px;
-      height: 50px;
+      width: 30px;
+      height: 30px;
       display: none;
       border: none;
       padding: 0px;
@@ -528,7 +529,7 @@ a.bstars:hover {
   @media screen and (max-width: 750px) {
 
     body {
-      margin-right: 20%;
+      margin-right: 17%;
     }
 
     #Navigation {
@@ -539,21 +540,29 @@ a.bstars:hover {
     }
 
     .PROJNAME {
-        font-size: 100px;
+        font-size: 50px;
     }
 
     a.caption {
-        font-size: 50px;
+        font-size: 20px;
     }
 
     .row {
         display:block;
         height: 500px;
-        padding-bottom: 400px;
+        column-gap: 500px;
+        padding-bottom: 90px;
         
-
     }
     
+    .row-end {
+        display:block;
+        height: 500px;
+        column-gap: 500px;
+        
+    }
+    
+
     .column {
         flex-grow: 1;
         text-align: left;
@@ -561,7 +570,7 @@ a.bstars:hover {
         outline: 5px solid;
         overflow: hidden;
         width: 100%;
-        row-gap: 1000px;
+        row-gap: 100px;
         /* width: 33.3%; */
         
     }
