--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -139,6 +139,16 @@ header {
     color: white;
 }
 
+.PROJNAMEend {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
+    font-size: 8.5rem;
+    
+    margin-bottom: 0;
+    font-stretch: condensed;
+    color: white;
+}
+
 a.PROJLINK {
     color: #fff;
     text-decoration: none;
@@ -853,6 +863,11 @@ opacity: 0.4;
         text-align: left;
         
         
+    }
+
+    .PROJNAMEend {
+        font-size: 3rem;
+        text-align:left
     }
 
     a.PROJLINK {
