--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -132,7 +132,7 @@ header {
 .PROJNAME {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
-    font-size: 8.5rem;
+    font-size: 8vw;
     
     margin-bottom: 0;
     font-stretch: condensed;
@@ -223,7 +223,7 @@ a.PROJLINK:hover {
 }
 
 .tiger {
-    float: left;
+    /* float: left; */
     margin-left: -8%;
     position: fixed;
     
@@ -424,12 +424,7 @@ footer {
     
 } */
 
-.header a.bstars {
-    float: right;
-    width: 10px;
-    height: 10px;
-    
-}
+
 
 .resumeBoi {
     
@@ -675,6 +670,10 @@ opacity: 0.4;
         
     }
 
+    .slider {
+        visibility: hidden;
+    }
+
     #Navigation {
         display: none;
         
@@ -791,7 +790,7 @@ opacity: 0.4;
         margin-left: 40%;
         border-radius: 50%;
         
-        position: absolute;
+        position:absolute;
         /* top: 50%; */
         transform: translate(-50%, -50%);
     }
