--- a/scorpion.css
+++ b/scorpion.css
@@ -82,8 +82,36 @@ body {
 
 }
 
+.email {
+    z-index: 4;
+    /*float: left;*/
+    color: rgb(22, 71, 242);
+    font-family: "Arial Black";
+    font-size: 1.2rem;
+    line-height: 1;
+
+}
+
+.emailArea {
+    margin-top: 70%;
+}
+
+.infoDiv {
+    text-align: right;
+
+}
+
+.infoFooter {
+    color: rgb(22, 71, 242);
+    font-family: "Arial Black";
+    font-size: 1rem;
+    line-height: 1;
+
+
+}
+
 .menuArea {
-    z-index: 1;
+    z-index: 3;
     display: block;
     position: absolute;
     left: 70%;
@@ -93,6 +121,7 @@ body {
     text-align: right;
     top: 5%;
 }
+
 
 .title_subGrid1 {
     /*border: 1px solid white;*/
@@ -112,12 +141,21 @@ body {
 
 .menuLabel {
     /*margin-left: 4%;*/
+    z-index: 4;
     color: white;
     font-family: "Arial Black";
-    font-size: 1.5em;
+    font-size: 1.5rem;
     line-height: 1;
+    float: left;
+}
 
-
+.menuLabeleh {
+    z-index: 4;
+    color: white;
+    font-family: "Arial Black";
+    font-size: 1rem;
+    line-height: 1;
+    float: left;
 }
 
 .menuLabelVERT {
