--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -798,7 +798,15 @@ opacity: 0.4;
 
     .mobile-work-title {
         
-        
+        line-height: 0rem;
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
+        font-size: 3rem;
+        font-weight: 100;
+    }
+
+    #moreSoon {
+        line-height: normal;
         font-family: Arial, Helvetica, sans-serif;
         color: white;
         font-size: 3rem;
@@ -843,11 +851,13 @@ opacity: 0.4;
 
     .proj-mobile-info {
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 15px;
+        font-size: 20px;
+        line-height: 20px;
         color: black;
         padding-top: 0;
 
     }
+
 
     .info-button {
         background: none;
@@ -874,11 +884,12 @@ opacity: 0.4;
 
     .proj-button {
         background: none;
-        border: 1px solid black;
+        border: 2px solid black;
         font-family: Arial, Helvetica, sans-serif;
         width: 90px;
         padding: 2px;
         height: 30px;
+        font-size: 20px;
         
     }
 
@@ -919,7 +930,7 @@ opacity: 0.4;
     }
 
     .slider {
-        margin-top: 100%;
+        margin-top: 130%;
         visibility: visible;
         width: 50px;
         height: 50px;
@@ -927,7 +938,6 @@ opacity: 0.4;
         opacity: 30%;
         margin-left: 40%;
         border-radius: 50%;
-        
         position:absolute;
         /* top: 50%; */
         transform: translate(-50%, -50%);
