--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -15,6 +15,16 @@ html {
     z-index: -1;
 }
 
+.inline-adit {
+
+    color: rgb(36, 204, 39);
+    text-decoration: none;
+}
+
+.inline-adit:hover {
+    opacity: 50%;
+}
+
 
 ::-webkit-scrollbar {
     color: black;
@@ -342,7 +352,7 @@ a.caption {
     color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.2rem;
-    text-align: center;
+    text-align: left;
     letter-spacing: 2px;
     position: absolute;
     top: 50%;
@@ -606,7 +616,7 @@ color: #fff;
 .robotics-info {
 
     display:flex;
-    height: 600px;
+    height: fit-content;
     
 }
 
@@ -621,19 +631,17 @@ color: #fff;
 
 .robotics-info-right {
     flex:1;
-    width: 500px;
-    /* border: 1px solid white; */
     
     
 }
 
 .rrt-video {
-    height: 100%;
+    width: 100%;
     float: right;
 }
 
 .kinova-video {
-    height: 100%;
+    width: 100%;
     float: right;
 }
 
