--- a/vday.css
+++ b/vday.css
@@ -17,7 +17,7 @@ body {
     /* text-transform: uppercase; */
     font-weight: 100;
     padding: 0;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .intro-text-h1 {
@@ -63,7 +63,6 @@ body {
 
 .your-love {
     min-height: 100vh;
-
     display: block;
 }
 
@@ -124,7 +123,7 @@ body {
 
 
 .vday-sched {
-    height: 100vh;
+    min-height: 100vh;
 
 }
 
@@ -148,8 +147,47 @@ body {
     font-size: 2em;
 }
 
+.vday-sched-lower-h1 {
+    padding-top: 3em;
+    font-size: 1em;
+    font-weight: 100;
+}
+
 /*--------------- TONIGHT ---------------*/
 
 .tonight {
+    min-height: 80vh;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.vday-sched-tonight {
+    color: white;
+    font-size: 4em;
+}
+
+.step {
+    width: 100%;
+    border: 2px solid white;
+    border-radius: 1em;
+    text-align: center;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.step-title {
+    font-weight: 200;
     
 }
+
+.vday-mobile-info {
+    font-weight: 500;
+}
+
+.vday-overlay {
+    overflow: hidden;
+    height: 0;
+}
+
+
+
