--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -2,16 +2,18 @@ html {
     scroll-behavior: smooth;
     /* background-image: url('matrixWebonWhite.svg'); */
     background-color: black;
-    scroll-snap-type: y proximity;
     scrollbar-gutter: initial;
     overflow-x: hidden;
 }
 
 .vid-container {
     position: absolute; 
-    top: 0; left:0;
-    width: 100%; height: 100%; 
     z-index: -1;
+    top: 0; left: 0;
+}
+
+.lines-video {
+    width: 100%;
 }
 
 .scrollCont {
@@ -104,10 +106,9 @@ body {
     padding-right: 1%;
     padding-bottom: 1%;
     min-height: 100vh;
-    scroll-snap-align: start;
-    overflow: visible;
-    
-    /* scroll-snap-stop: normal; */
+    max-width: 100vw;
+    overflow: hidden;
+
 }
 
 /* @keyframes rotate {
@@ -624,14 +625,13 @@ color: #fff;
 
     display:flex;
     height: fit-content;
-
+    color: white;
     
 }
 
 .robotics-info-left {
     flex:1;
     border-radius: 15px;
-
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 
@@ -642,20 +642,11 @@ color: #fff;
     min-height: 100%;
 }
 
-.rrt-video {
-    width: 100%;
+.robot-video {
+    width: 90%;
     float: right;
-}
-
-.kinova-video {
-    width: 100%;
-    float: right;
-}
-
-.nn-follower-video {
-
-    width: 100%;
-    float: right;
+    bottom:0;
+    
 }
 
 @media screen and (max-width: 1200px) {
